fixing the lack of padding to the bottom of the page content on small screens

--- a/sass/styles.scss
+++ b/sass/styles.scss
@@ -86,6 +86,9 @@ html {
 	// 	background-color: #FFF;
 	// }
 
+	@media screen and (max-width: 767px) {
+		height: auto;
+	}
 	@media screen and (min-width: 768px) {
 		background-image: url('../images/audio-board-3-md.jpg');
 	}
@@ -100,9 +103,6 @@ body {
 	@include bodyFont;
 	background: transparent none;
 
-	@media screen and (max-width: 767px) {
-		padding-bottom: 15px;
-	}
 }
 
 h1, h2, h3 {
